Fix search result overflow and font-size.

--- a/src/SourceBrowser.Site/Content/Site.css
+++ b/src/SourceBrowser.Site/Content/Site.css
@@ -78,6 +78,7 @@ textarea {
     display:block;
     padding:5px 10px;
     color:#333;
+    overflow:hidden;
 }
 
 #search-results span {
@@ -86,6 +87,11 @@ textarea {
 
 #search-results a span:first-of-type{
     font-weight:bold;
+}
+
+#search-results a span:last-of-type{
+    font-size:12px;
+    color:#666;
 }
 
 #search-results a:hover {
